Update Spring Boot 1.5.18.RELEASE => 2.0.7.RELEASE.

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -11,25 +11,23 @@ spring.mandatory-file-encoding=UTF-8
 
 spring.hateoas.use-hal-as-default-json-media-type=false
 
-flyway.baseline-on-migrate=true
-flyway.baseline-version=1
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
-spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
 
-server.context-path=/myreader
+server.servlet.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
 
-spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
-management.add-application-context-header=false
+management.endpoints.web.base-path=/
+management.server.add-application-context-header=false
 
 job.fetchError.retainInDays=7
 
