--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,3 @@
-buildscript {
-    ext.springBootVersion = '1.5.18.RELEASE'
-
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 plugins {
     id "org.sonarqube" version "2.5"
 }
@@ -25,11 +13,13 @@ configure(allprojects) {
 
     idea.module {
         excludeDirs += [
-                file('bin'),      // containing build artifacts from Eclipse (if any)
-                file('work'),     // containing transient artifacts used by embedded Tomcat
-                file('logs'),     // containing app logs written by embedded Tomcat
-                file('data'),     // containing logs and data written by elasticsearch
-                file('.settings') // containing intentionally checked-in Eclipse metadata
+                file('bin'),
+                file('work'),
+                file('logs'),
+                file('data'),
+                file('gradle'),
+                file('.idea'),
+                file('.settings')
         ]
     }
 }
