--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
+    ext.springBootVersion = '2.0.7.RELEASE'
     ext.dependencyCheckVersion = '3.1.2'
-    ext['flyway.version'] = '4.2.0'
 
     repositories {
         mavenCentral()
     }
 
     dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath "org.owasp:dependency-check-gradle:${dependencyCheckVersion}"
     }
 }
@@ -20,18 +21,15 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: 'pmd'
 apply plugin: 'findbugs'
 apply plugin: 'org.owasp.dependencycheck'
 
 group = 'myreader'
 
-jar {
+bootJar {
     archiveName = 'myreader.jar'
-}
-
-repositories {
-    mavenCentral()
 }
 
 dependencies {
@@ -41,7 +39,7 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-hateoas'
     compile group: 'org.springframework.security', name: 'spring-security-data'
-    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.4.0.Final'
+    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.9.0.Final'
     compile group: 'org.hsqldb', name: 'hsqldb'
     compile group: 'org.flywaydb', name: 'flyway-core'
     compile group: 'com.rometools', name: 'rome', version: '1.5.1'
@@ -52,6 +50,9 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'com.google.guava', name: 'guava', version: '24.1.1-jre' // CVE 19.0 owasp-java-html-sanitizer
     compile group: 'com.googlecode.owasp-java-html-sanitizer', name: 'owasp-java-html-sanitizer', version: '20181114.1'
+
+    implementation 'org.apache.lucene:lucene-backward-codecs:5.5.5'
+
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     testCompile group: 'org.springframework.security', name: 'spring-security-test'
     testCompile group: 'net.javacrumbs.json-unit', name: 'json-unit', version: '1.1.5'
@@ -75,7 +76,6 @@ jacocoTestReport {
 
 springBoot {
     buildInfo()
-    backupSource = false
 }
 
 dependencyCheck {
