--- a/myreader-backend/src/test/resources/application.properties
+++ b/myreader-backend/src/test/resources/application.properties
@@ -16,14 +16,13 @@ spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.directory_provider=ram
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
-spring.jpa.properties.hibernate.search.lucene_version=LUCENE_41
 
-server.context-path=/myreader
+management.endpoints.web.base-path=/
+
+server.servlet.context-path=/myreader
 server.port=0
 server.address=127.0.0.1
 
-spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
 job.fetchError.retainInDays=7
