--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -26,10 +26,11 @@ server.address=127.0.0.1
 
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
+spring.task.scheduling.pool.size=10
+
 management.endpoints.web.base-path=/
 management.server.add-application-context-header=false
 
 job.fetchError.retainInDays=7
 
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
-
