--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -34,3 +34,5 @@ management.server.add-application-context-header=false
 job.fetchError.retainInDays=7
 
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
+
+task.enabled=true
