Update webpack-dev-server 3.1.10 => 3.1.14. Replace snyk with npm audit.

--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -25,7 +25,7 @@ task resolve(dependsOn: npm_install) {
 }
 
 task dependencyCheckAnalyze(type: NpmTask, dependsOn: npm_install) {
-    args = ['run', 'snyk']
+    args = ['audit']
 }
 
 task lint(type: NpmTask, dependsOn: npm_install) {
