--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
 
+spring.jmx.enabled=false
+
 server.servlet.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
