--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "7.0.0",
     "babel-jest": "24.1.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "clean-webpack-plugin": "1.0.1",
     "css-loader": "2.1.0",
     "cssnano": "4.1.8",
