--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ sonarqube {
         property "sonar.links.issue", "https://github.com/ksokol/myreader/issues"
         property "sonar.links.scm", "https://github.com/ksokol/myreader"
         property "sonar.links.scm_dev", "scm:git:git@github.com:ksokol/myreader.git"
+        property "sonar.testExecutionReportPaths", ["${project(':myreader-frontend').buildDir}/TESTS.xml"]
     }
 }
 
@@ -91,7 +92,6 @@ project(':myreader-frontend') {
             property "sonar.tests", ["${projectDir}/src/app/js"]
             property "sonar.test.inclusions", ["**/*.spec.js"]
             property "sonar.javascript.lcov.reportPaths", "${buildDir}/reports/coverage/lcov.info"
-            property "sonar.testExecutionReportPaths", "${buildDir}/TESTS.xml"
             property "sonar.eslint.reportPaths", "${buildDir}/reports/eslint.json"
         }
     }
