--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -30,8 +30,7 @@
     "react-redux": "5.1.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0",
-    "timeago.js": "3.0.2"
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
@@ -64,6 +63,7 @@
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "raw-loader": "1.0.0",
     "redux-mock-store": "1.5.3",
+    "relative-time-format": "0.2.1",
     "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "svg-url-loader": "2.3.2",
