--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext.springBootVersion = '2.1.2.RELEASE'
-    ext.dependencyCheckVersion = '3.1.2'
     ext.romeToolsVersion = '1.12.0'
     ext.commonsLang3Version = '3.8.1'
     ext.commonsIoVersion = '2.6'
@@ -12,17 +10,17 @@ buildscript {
 
 plugins {
     id "jacoco"
-    id "com.gorylenko.gradle-git-properties" version "1.4.6"
+    id "org.springframework.boot" version "2.1.3.RELEASE"
+    id "com.gorylenko.gradle-git-properties" version "2.0.0"
     id "com.wiredforcode.spawn" version "0.8.2"
+    id "org.owasp.dependencycheck" version "4.0.2"
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'pmd'
 apply plugin: 'findbugs'
-apply plugin: 'org.owasp.dependencycheck'
 
 group = 'myreader'
 
