--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -32,7 +32,7 @@ task lint(type: NpmTask, dependsOn: npm_install) {
 }
 
 task test(overwrite: true, dependsOn: [npm_install, npm_test]) {
-    inputs.files files('src', 'test', 'webpack.config.js', 'src/tests.webpack.js', 'package.json', 'karma.conf.js')
+    inputs.files files('src', 'webpack.config.js', 'package.json')
 }
 
 task build(type: NpmTask, dependsOn: [npm_install, test]) {
