--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -30,7 +30,7 @@ task lint(type: NpmTask, dependsOn: npm_install) {
     args = ['run', 'lint']
 }
 
-task test(overwrite: true, dependsOn: [npm_install, npm_test]) {
+task test(dependsOn: [npm_install, npm_test]) {
     inputs.files files('src', 'webpack.config.js', 'package.json')
 }
 
