Configure PMD error prone rule set. Include PMD performance and security rule sets. Fix PMD violations.

--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -56,6 +56,11 @@ compileJava {
     sourceCompatibility = javaLangVersion
 }
 
+pmd {
+    ruleSets = []
+    ruleSetConfig = resources.text.fromFile("$projectDir/rulesets.xml")
+}
+
 bootJar {
     archiveFileName = 'myreader.jar'
 }
