--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -39,9 +39,9 @@
     "babel-jest": "24.3.1",
     "babel-loader": "8.0.5",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "clean-webpack-plugin": "1.0.1",
-    "css-loader": "2.1.0",
-    "cssnano": "4.1.8",
+    "clean-webpack-plugin": "2.0.0",
+    "css-loader": "2.1.1",
+    "cssnano": "4.1.10",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.10.0",
     "eslint": "5.12.1",
@@ -63,11 +63,12 @@
     "relative-time-format": "0.2.1",
     "svg-url-loader": "2.3.2",
     "sw-precache-webpack-plugin": "0.11.5",
-    "webpack": "4.23.1",
-    "webpack-bundle-analyzer": "3.0.3",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-pwa-manifest": "3.7.1"
+    "terser-webpack-plugin": "1.2.3",
+    "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.1",
+    "webpack-pwa-manifest": "4.0.0"
   },
   "directories": {
     "test": "test"
