--- a/myreader-frontend/build.gradle
+++ b/myreader-frontend/build.gradle
@@ -22,6 +22,13 @@ task resolve(dependsOn: npm_install) {
     }
 }
 
+// Workaround for https://github.com/srs/gradle-node-plugin/issues/131
+project.afterEvaluate {
+    tasks.npm_install.inputs.file(file('package.json'))
+    tasks.npm_install.outputs.dir(file('node_modules'))
+    tasks.npm_install.outputs.file(file('package-lock.json'))
+}
+
 task dependencyCheckAnalyze(type: NpmTask, dependsOn: npm_install) {
     args = ['audit']
 }
