--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -34,9 +34,11 @@
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "7.3.4",
     "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "24.5.0",
     "babel-loader": "8.0.5",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
