--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -29,8 +29,7 @@
     "react-dom": "16.8.5",
     "react-redux": "6.0.1",
     "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
