--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -17,17 +17,16 @@
     "@fortawesome/free-solid-svg-icons": "5.8.1",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@jaames/iro": "4.3.3",
-    "@uirouter/core": "5.0.23",
-    "@uirouter/react": "0.8.9",
     "classnames": "2.2.6",
     "dialog-polyfill": "0.5.0",
     "downshift": "3.2.7",
     "lodash.debounce": "4.0.8",
-    "lodash.isequal": "4.5.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.2",
+    "react-router": "5.0.0",
+    "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
   },
