--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -28,16 +28,16 @@
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
-    "@babel/preset-env": "7.4.3",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
+    "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.1",
     "babel-jest": "24.8.0",
-    "babel-loader": "8.0.5",
+    "babel-loader": "8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "clean-webpack-plugin": "2.0.1",
+    "clean-webpack-plugin": "3.0.0",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "enzyme": "3.9.0",
@@ -45,26 +45,26 @@
     "eslint": "5.16.0",
     "eslint-plugin-jest": "22.6.4",
     "eslint-plugin-react": "7.13.0",
-    "file-loader": "3.0.1",
+    "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
     "intersection-observer": "0.5.1",
     "jest": "24.8.0",
     "jest-sonar-reporter": "2.0.0",
     "lodash.ismatch": "4.4.0",
-    "mini-css-extract-plugin": "0.6.0",
+    "mini-css-extract-plugin": "0.7.0",
     "mock-local-storage": "1.1.8",
-    "null-loader": "0.1.1",
+    "null-loader": "3.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
-    "raw-loader": "2.0.0",
+    "raw-loader": "3.0.0",
     "redux-mock-store": "1.5.3",
     "relative-time-format": "0.2.2",
     "svg-url-loader": "2.3.2",
     "sw-precache-webpack-plugin": "0.11.5",
-    "terser-webpack-plugin": "1.2.3",
-    "webpack": "4.30.0",
+    "terser-webpack-plugin": "1.3.0",
+    "webpack": "4.33.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.3.1",
+    "webpack-cli": "3.3.3",
+    "webpack-dev-server": "3.7.1",
     "webpack-pwa-manifest": "4.0.0"
   },
   "directories": {
