--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -42,9 +42,10 @@
     "cssnano": "4.1.10",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "5.16.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-jest": "22.6.4",
     "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-unicorn": "9.0.0",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
     "intersection-observer": "0.7.0",
