--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -45,6 +45,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "22.6.4",
     "eslint-plugin-react": "7.13.0",
+    "eslint-plugin-react-hooks": "1.6.0",
     "eslint-plugin-unicorn": "9.0.0",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
