Update Gradle Plugin dependencycheck 5.0.0-M2 => 5.0.0 and enable it on Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ install:
   - ./gradlew resolve
 
 script:
-  # Deactivated due to https://github.com/jeremylong/DependencyCheck/issues/1827
-  #- travis_wait 20 ./gradlew dependencyCheckAnalyze
+  - travis_wait 20 ./gradlew dependencyCheckAnalyze
   - git fetch --unshallow # necessary for SonarCloud blame information
   - ./gradlew check sonarqube
   - if [[ $TRAVIS_BRANCH == "master" ]]; then ./gradlew build -x check -x test; fi
