Update owasp-java-html-sanitizer 20181114.1 => 20190610.1.

--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -20,6 +20,7 @@ def romeToolsVersion = '1.12.0'
 def commonsLang3Version = '3.8.1'
 def commonsIoVersion = '2.6'
 def commonsTextVersion = '1.6'
+def htmlSanitizerVersion = '20190610.1'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -38,8 +39,8 @@ dependencies {
     }
     compile group: 'org.apache.commons', name: 'commons-lang3', version: "${commonsLang3Version}"
     compile group: 'commons-io', name: 'commons-io', version: "${commonsIoVersion}"
-    compile group: 'com.googlecode.owasp-java-html-sanitizer', name: 'owasp-java-html-sanitizer', version: '20181114.1'
     implementation "org.apache.commons:commons-text:${commonsTextVersion}"
+    implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
