--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -33,7 +33,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.5.4",
     "@babel/preset-env": "7.5.4",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "10.0.2",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
@@ -42,11 +42,11 @@
     "cssnano": "4.1.10",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-jest": "22.6.4",
-    "eslint-plugin-react": "7.13.0",
-    "eslint-plugin-react-hooks": "1.6.0",
-    "eslint-plugin-unicorn": "9.0.0",
+    "eslint": "6.0.1",
+    "eslint-plugin-jest": "22.7.2",
+    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react-hooks": "1.6.1",
+    "eslint-plugin-unicorn": "9.1.1",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
     "intersection-observer": "0.7.0",
