--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -22,11 +22,8 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-redux": "7.1.0",
     "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
-    "redux": "4.0.4",
-    "redux-thunk": "2.3.0"
+    "react-router-dom": "5.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.4",
@@ -60,7 +57,6 @@
     "null-loader": "3.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "raw-loader": "3.0.0",
-    "redux-mock-store": "1.5.3",
     "relative-time-format": "1.0.5",
     "svg-url-loader": "3.0.0",
     "sw-precache-webpack-plugin": "0.11.5",
