--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run lint:js-report && npm run lint:lockfile",
     "lint:js-report": "eslint -f json -o build/reports/eslint.json -c .eslintrc.js src/app/js",
     "lint:js": "eslint -c .eslintrc.js src/app/js",
-    "lint:lockfile": "npx lockfile-lint --path package-lock.json -s -a registry.npmjs.org -o https:"
+    "lint:lockfile": "npx lockfile-lint -p package-lock.json -s -a npm -t npm"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.9.0",
@@ -31,7 +31,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.8.3",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
-    "babel-eslint": "10.0.2",
+    "babel-eslint": "10.1.0",
     "babel-jest": "24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
@@ -40,17 +40,17 @@
     "cssnano": "4.1.10",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "6.7.2",
-    "eslint-plugin-jest": "23.1.1",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-unicorn": "14.0.1",
+    "eslint": "6.8.0",
+    "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "eslint-plugin-unicorn": "17.2.0",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
     "intersection-observer": "0.7.0",
     "jest": "24.9.0",
     "jest-sonar-reporter": "2.0.0",
-    "lockfile-lint": "3.0.5",
+    "lockfile-lint": "4.1.0",
     "lodash.ismatch": "4.4.0",
     "mini-css-extract-plugin": "0.7.0",
     "mock-local-storage": "1.1.8",
