--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -13,14 +13,13 @@ spring.hateoas.use-hal-as-default-json-media-type=false
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
+spring.flyway.table=schema_version
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
-
-spring.jmx.enabled=false
 
 server.servlet.context-path=/myreader
 server.port=19340
