--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -21,6 +21,7 @@ def commonsLang3Version = '3.8.1'
 def commonsIoVersion = '2.6'
 def commonsTextVersion = '1.6'
 def htmlSanitizerVersion = '20190610.1'
+def hibernateSearchVersion = '5.11.5.Final'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -29,13 +30,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.security:spring-security-data'
-    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: '5.10.5.Final'
+    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: hibernateSearchVersion
     compile group: 'org.hsqldb', name: 'hsqldb'
     compile group: 'org.flywaydb', name: 'flyway-core'
-    compile group: 'com.rometools', name: 'rome', version: "${romeToolsVersion}"
-    compile group: 'com.rometools', name: 'rome-modules', version: "${romeToolsVersion}"
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: "${commonsLang3Version}"
-    compile group: 'commons-io', name: 'commons-io', version: "${commonsIoVersion}"
+    compile group: 'com.rometools', name: 'rome', version: romeToolsVersion
+    compile group: 'com.rometools', name: 'rome-modules', version: romeToolsVersion
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3Version
+    compile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
     implementation "org.apache.commons:commons-text:${commonsTextVersion}"
     implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
     implementation "org.apache.httpcomponents:httpclient"
