chore: Configure forward headers strategy for Spring HATEOAS.

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.jpa.properties.hibernate.search.default.indexBase=data/index
 server.servlet.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
+server.forward-headers-strategy=framework
 
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
