--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,10 +48,8 @@ jobs:
 
       - name: Release Project
         if: contains(github.ref, 'master')
-        uses: ksokol/github-release-action@master
+        uses: ksokol/github-release-action@v1
         with:
           tag_name: ${{ github.ref }}-${{ github.sha }}
           release_name: ${{ github.sha }}
-          asset_path: build/myreader.jar
-          asset_name: myreader.jar
-          asset_content_type: application/java-archive
+          asset_glob: build/myreader.jar
