chore: Inline .eslintrc.js into package.json.

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -10,8 +10,8 @@
     "start": "npm run server",
     "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json",
     "lint": "npm run lint:js-report && npm run lint:lockfile",
-    "lint:js-report": "eslint -f json -o build/reports/eslint.json -c .eslintrc.js src/app/js",
-    "lint:js": "eslint -c .eslintrc.js src/app/js",
+    "lint:js-report": "eslint -f json -o build/reports/eslint.json src/app/js",
+    "lint:js": "eslint src/app/js",
     "lint:lockfile": "npx lockfile-lint -p package-lock.json -s -a npm -t npm",
     "audit:high": "npm audit --audit-level=high"
   },
@@ -73,5 +73,68 @@
   "jestSonar": {
     "reportPath": "build",
     "reportFile": "TESTS.xml"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "env": {
+      "browser": true,
+      "es6": true,
+      "jest/globals": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:unicorn/recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "settings": {
+      "react": {
+        "version": "16"
+      }
+    },
+    "plugins": [
+      "jest",
+      "react-hooks"
+    ],
+    "rules": {
+      "indent": [
+        "warn",
+        2
+      ],
+      "linebreak-style": [
+        "error",
+        "unix"
+      ],
+      "quotes": [
+        "warn",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "never"
+      ],
+      "no-undef": "warn",
+      "no-unused-vars": "warn",
+      "jest/no-disabled-tests": "warn",
+      "jest/no-focused-tests": "error",
+      "jest/no-identical-title": "warn",
+      "jest/prefer-to-have-length": "warn",
+      "jest/valid-expect": "error",
+      "react/display-name": "warn",
+      "unicorn/prevent-abbreviations": "off",
+      "unicorn/catch-error-name": "warn",
+      "unicorn/filename-case": "off",
+      "unicorn/prefer-query-selector": "error",
+      "unicorn/import-index": "error",
+      "unicorn/prefer-includes": "warn",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "error"
+    }
   }
 }
