--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -10,6 +10,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'pmd'
+apply plugin: 'project-report'
 
 repositories {
     mavenCentral()
