--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id "jacoco"
     id "org.springframework.boot" version "2.2.6.RELEASE"
-    id "com.gorylenko.gradle-git-properties" version "2.0.0"
-    id "org.owasp.dependencycheck" version "5.0.0"
+    id "com.gorylenko.gradle-git-properties" version "2.2.2"
+    id "org.owasp.dependencycheck" version "5.3.2.1"
     id "com.github.psxpaul.execfork" version "0.1.13"
-    id "com.github.spotbugs" version "1.7.1"
+    id "com.github.spotbugs" version "4.2.1"
 }
 
 apply plugin: 'java'
@@ -46,9 +46,16 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+spotbugsMain {
     reports {
-        xml.enabled = false
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+spotbugsTest {
+    reports {
+        xml.enabled = true
         html.enabled = true
     }
 }
