--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -21,10 +21,14 @@ spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 spring.jpa.properties.hibernate.search.default.indexBase=data/index
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+spring.data.jpa.repositories.bootstrap-mode=default
+
 server.servlet.context-path=/myreader
 server.port=19340
 server.address=127.0.0.1
 server.forward-headers-strategy=framework
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
