--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "2.2.2"
     id "org.owasp.dependencycheck" version "5.3.2.1"
     id "com.github.psxpaul.execfork" version "0.1.13"
-    id "com.github.spotbugs" version "4.2.1"
+    id "com.github.spotbugs" version "4.3.0"
 }
 
 apply plugin: 'java'
@@ -44,6 +44,11 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+}
+
+spotbugs {
+    // https://github.com/spotbugs/spotbugs-gradle-plugin/issues/241
+    toolVersion = '4.0.4'
 }
 
 spotbugsMain {
