fix: various bugs in entry stream page after migration to hooks. replace custom debounce and hotkeys function with a better third party implementation.

--- a/myreader-frontend/.eslintrc.json
+++ b/myreader-frontend/.eslintrc.json
@@ -8,7 +8,9 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:unicorn/recommended"
+    "plugin:unicorn/recommended",
+    "plugin:jest-dom/recommended",
+    "plugin:testing-library/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -58,6 +60,7 @@
     "react-hooks/exhaustive-deps": "error",
     "unicorn/no-null":  "off",
     "unicorn/no-fn-reference-in-iterator": "warn",
-    "unicorn/no-reduce": "off"
+    "unicorn/no-reduce": "off",
+    "jest-dom/prefer-focus": "warn"
   }
 }
