--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -20,18 +20,22 @@
     "@jaames/iro": "5.1.9",
     "classnames": "2.2.6",
     "dialog-polyfill": "0.5.1",
-    "lodash.debounce": "4.0.8",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hotkeys-hook": "2.3.1",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "use-debounce": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.0",
     "@babel/plugin-proposal-class-properties": "7.10.4",
     "@babel/preset-env": "7.11.0",
     "@babel/preset-react": "7.10.4",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.0.4",
+    "@testing-library/react-hooks": "3.4.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
@@ -43,14 +47,17 @@
     "enzyme-adapter-react-16": "1.15.2",
     "eslint": "7.6.0",
     "eslint-plugin-jest": "23.20.0",
+    "eslint-plugin-jest-dom": "3.2.3",
     "eslint-plugin-react": "7.20.5",
     "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-testing-library": "3.9.0",
     "eslint-plugin-unicorn": "21.0.0",
     "file-loader": "6.0.0",
     "html-webpack-plugin": "4.3.0",
     "jest": "26.2.2",
     "jest-sonar-reporter": "2.0.0",
     "lockfile-lint": "4.3.7",
+    "lodash.isequal": "4.4.0",
     "lodash.ismatch": "4.4.0",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
