--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: build
 
 on: [push]
 
@@ -40,7 +40,7 @@ jobs:
       - name: Check Project
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew --console=plain --no-daemon dependencyCheckAnalyze check jacocoTestReport sonarqube
+        run: ./gradlew --console=plain --no-daemon check jacocoTestReport sonarqube
 
       - name: Build Project
         if: contains(github.ref, 'master')
