--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -107,6 +107,8 @@ task devRun(type: com.github.psxpaul.task.ExecFork) {
 }
 
 test {
+    dependsOn 'cleanTest' // always run the tests in the same order
+    useJUnitPlatform()
     testLogging {
         exceptionFormat = 'full'
 
