--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -61,14 +61,15 @@
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "raw-loader": "4.0.1",
+    "register-service-worker": "1.7.1",
     "svg-url-loader": "6.0.0",
-    "sw-precache-webpack-plugin": "1.0.0",
     "terser-webpack-plugin": "3.0.8",
     "webpack": "4.44.1",
     "webpack-bundle-analyzer": "3.8.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
-    "webpack-pwa-manifest": "4.2.0"
+    "webpack-pwa-manifest": "4.2.0",
+    "workbox-webpack-plugin": "5.1.4"
   },
   "resolutions": {
     "minimist": "1.2.5",
