--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -2,9 +2,8 @@
   "name": "myreader-frontend",
   "description": "Myreader frontend package",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
-    "build": "export NODE_ENV=production && webpack --bail --progress --profile --display-optimization-bailout",
-    "server": "export NODE_ENV=development && webpack-dev-server --history-api-fallback --inline --progress",
+    "build": "export NODE_ENV=production && webpack --bail --progress --profile",
+    "server": "export NODE_ENV=development && webpack serve  --history-api-fallback --inline --progress",
     "test": "export NODE_ENV=test && jest --coverage --ci --silent",
     "test-watch": "export NODE_ENV=test && jest --watch --verbose false",
     "start": "npm run server",
@@ -40,7 +39,7 @@
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "css-loader": "4.2.0",
+    "css-loader": "5.0.0",
     "cssnano": "4.1.10",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
@@ -51,29 +50,24 @@
     "eslint-plugin-react-hooks": "4.0.8",
     "eslint-plugin-testing-library": "3.9.0",
     "eslint-plugin-unicorn": "21.0.0",
-    "file-loader": "6.0.0",
-    "html-webpack-plugin": "4.3.0",
+    "html-webpack-plugin": "4.5.0",
     "jest": "26.2.2",
     "jest-sonar-reporter": "2.0.0",
     "lockfile-lint": "4.3.7",
     "lodash.isequal": "4.4.0",
     "lodash.ismatch": "4.4.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "raw-loader": "4.0.1",
+    "mini-css-extract-plugin": "1.2.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "raw-loader": "4.0.2",
     "register-service-worker": "1.7.1",
     "svg-url-loader": "6.0.0",
-    "terser-webpack-plugin": "3.0.8",
-    "webpack": "4.44.1",
-    "webpack-bundle-analyzer": "3.8.0",
-    "webpack-cli": "3.3.12",
+    "terser-webpack-plugin": "5.0.3",
+    "webpack": "5.3.0",
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-cli": "4.1.0",
     "webpack-dev-server": "3.11.0",
     "webpack-pwa-manifest": "4.2.0",
     "workbox-webpack-plugin": "5.1.4"
-  },
-  "resolutions": {
-    "minimist": "1.2.5",
-    "dot-prop": "5.2.0"
   },
   "directories": {
     "test": "test"
