chore: upgrade dependencies
@testing-library/jest-dom 5.11.4 => 5.11.5, @testing-library/react 11.0.4 => 11.1.0, @testing-library/react-hooks 3.4.1 => 3.4.2, enzyme-adapter-react-16 1.15.2 => 1.15.5, eslint 7.6.0 => 7.12.1, eslint-plugin-jest 23.20.0 => 24.1.0, eslint-plugin-jest-dom 3.2.3 => 3.2.4, eslint-plugin-react 7.20.5 => 7.21.5, eslint-plugin-react-hooks 4.0.8 => 4.2.0, eslint-plugin-testing-library 3.9.0 => 3.9.2, eslint-plugin-unicorn 21.0.0 => 23.0.0, jest 26.2.2 => 26.6.1, lodash.isequal 4.4.0 => 4.5.0

--- a/myreader-frontend/.eslintrc.json
+++ b/myreader-frontend/.eslintrc.json
@@ -61,6 +61,8 @@
     "unicorn/no-null":  "off",
     "unicorn/no-fn-reference-in-iterator": "warn",
     "unicorn/no-reduce": "off",
-    "jest-dom/prefer-focus": "warn"
+    "jest-dom/prefer-focus": "warn",
+    "unicorn/consistent-function-scoping": "warn",
+    "unicorn/explicit-length-check": "warn"
   }
 }
