--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id "jacoco"
-    id "org.springframework.boot" version "2.3.2.RELEASE"
-    id "com.gorylenko.gradle-git-properties" version "2.2.3"
-    id "org.owasp.dependencycheck" version "5.3.2.1"
-    id "com.github.psxpaul.execfork" version "0.1.13"
-    id "com.github.spotbugs" version "4.4.4"
+  id "jacoco"
+  id "org.springframework.boot" version "2.4.1"
+  id "com.gorylenko.gradle-git-properties" version "2.2.3"
+  id "org.owasp.dependencycheck" version "5.3.2.1"
+  id "com.github.psxpaul.execfork" version "0.1.13"
+  id "com.github.spotbugs" version "4.4.4"
 }
 
 apply plugin: 'java'
@@ -13,7 +13,7 @@ apply plugin: 'pmd'
 apply plugin: 'project-report'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 def javaLangVersion = JavaVersion.VERSION_11
@@ -22,96 +22,99 @@ def commonsLang3Version = '3.8.1'
 def commonsIoVersion = '2.6'
 def commonsTextVersion = '1.6'
 def htmlSanitizerVersion = '20190610.1'
-def hibernateSearchVersion = '5.11.5.Final'
+def hibernateSearchVersion = '5.11.7.Final'
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
-    implementation 'org.springframework.security:spring-security-data'
-    compile group: 'org.hibernate', name: 'hibernate-search-orm', version: hibernateSearchVersion
-    compile group: 'org.hsqldb', name: 'hsqldb'
-    compile group: 'org.flywaydb', name: 'flyway-core'
-    compile group: 'com.rometools', name: 'rome', version: romeToolsVersion
-    compile group: 'com.rometools', name: 'rome-modules', version: romeToolsVersion
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3Version
-    compile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
-    implementation "org.apache.commons:commons-text:${commonsTextVersion}"
-    implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
-    implementation "org.apache.httpcomponents:httpclient"
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+  implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+  implementation 'org.springframework.security:spring-security-data'
+  compile group: 'org.hibernate', name: 'hibernate-search-orm', version: hibernateSearchVersion
+  compile group: 'org.hsqldb', name: 'hsqldb'
+  compile group: 'org.flywaydb', name: 'flyway-core'
+  compile group: 'com.rometools', name: 'rome', version: romeToolsVersion
+  compile group: 'com.rometools', name: 'rome-modules', version: romeToolsVersion
+  compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3Version
+  compile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
+  implementation "org.apache.commons:commons-text:${commonsTextVersion}"
+  implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
+  implementation "org.apache.httpcomponents:httpclient"
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation 'org.springframework.security:spring-security-test'
+  testImplementation('org.junit.vintage:junit-vintage-engine') {
+    exclude group: 'org.hamcrest', module: 'hamcrest-core'
+  }
 }
 
 spotbugs {
-    excludeFilter = file("$projectDir/spotbugs-excludes.xml")
+  excludeFilter = file("$projectDir/spotbugs-excludes.xml")
 }
 
 spotbugsMain {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
+  reports {
+    xml.enabled = true
+    html.enabled = true
+  }
 }
 
 spotbugsTest {
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
+  reports {
+    xml.enabled = true
+    html.enabled = true
+  }
 }
 
 compileJava {
-    targetCompatibility = javaLangVersion
-    sourceCompatibility = javaLangVersion
+  targetCompatibility = javaLangVersion
+  sourceCompatibility = javaLangVersion
 }
 
 pmd {
-    ruleSets = []
-    ruleSetConfig = resources.text.fromFile("$projectDir/pmd-rulesets.xml")
+  ruleSets = []
+  ruleSetConfig = resources.text.fromFile("$projectDir/pmd-rulesets.xml")
 }
 
 bootJar {
-    archiveFileName = 'myreader.jar'
+  archiveFileName = 'myreader.jar'
 }
 
 jacocoTestReport {
-    reports {
-        html.enabled = true
-        xml.enabled = true
-    }
+  reports {
+    html.enabled = true
+    xml.enabled = true
+  }
 }
 
 springBoot {
-    buildInfo()
+  buildInfo()
 }
 
 dependencyCheck {
-    failBuildOnCVSS = 7
-    suppressionFile = "${projectDir}/owasp/cve_suppress.xml"
-    analyzers {
-        jarEnabled = false
-    }
+  failBuildOnCVSS = 7
+  suppressionFile = "${projectDir}/owasp/cve_suppress.xml"
+  analyzers {
+    jarEnabled = false
+  }
 }
 
 task devRun(type: com.github.psxpaul.task.ExecFork) {
-    def withAppTasks = project.hasProperty('withAppTasks') as String
+  def withAppTasks = project.hasProperty('withAppTasks') as String
 
-    environment << ['TASK_ENABLED' : withAppTasks]
-    commandLine '../gradlew'
-    args = ['bootRun']
-    waitForOutput 'Started Starter'
+  environment << ['TASK_ENABLED': withAppTasks]
+  commandLine '../gradlew'
+  args = ['bootRun']
+  waitForOutput 'Started Starter'
 }
 
 test {
-    dependsOn 'cleanTest' // always run the tests in the same order
-    useJUnitPlatform()
-    testLogging {
-        exceptionFormat = 'full'
+  dependsOn 'cleanTest' // always run the tests in the same order
+  useJUnitPlatform()
+  testLogging {
+    exceptionFormat = 'full'
 
-        events = ["failed", "passed", "skipped", "standardOut", "standardError"]
-    }
+    events = ["failed", "passed", "skipped", "standardOut", "standardError"]
+  }
 }
