refactor: remove multi user support

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -42,3 +42,5 @@ job.fetchError.retainInDays=7
 remember-me.key=35beb88f-4c1f-4f39-aab2-953115ea33ba
 
 task.enabled=true
+
+user.password.bcrypt=$2a$10$xTKjRl0GRtcU6FJWjI3o.OMRUAOhLqKUT/dw8T6h7Wgsspx6FMRAW
