--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -24,8 +24,7 @@
     "react-dom": "16.13.1",
     "react-hotkeys-hook": "2.4.0",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "use-debounce": "5.0.1"
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
